--- a/TurboWavelets-Test/TurboWavelets-Test.csproj
+++ b/TurboWavelets-Test/TurboWavelets-Test.csproj
@@ -6,9 +6,10 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5C7CD59F-8311-41F2-93D4-058913CEEA91}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>TurboWavelets</RootNamespace>
-    <AssemblyName>TurboWavelets.Net</AssemblyName>
+    <AssemblyName>TurboWavelets</AssemblyName>
+    <StartupObject>TurboWavelets.TurboWaveletsTest</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,7 +19,7 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
