--- a/TurboWavelets-Test/TurboWavelets-Test.csproj
+++ b/TurboWavelets-Test/TurboWavelets-Test.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>TurboWavelets</RootNamespace>
     <AssemblyName>TurboWavelets</AssemblyName>
     <StartupObject>TurboWavelets.TurboWaveletsTest</StartupObject>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
