--- a/TurboWavelets-Test/TurboWavelets-Test.csproj
+++ b/TurboWavelets-Test/TurboWavelets-Test.csproj
@@ -6,10 +6,9 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5C7CD59F-8311-41F2-93D4-058913CEEA91}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>TurboWavelets</RootNamespace>
     <AssemblyName>TurboWavelets</AssemblyName>
-    <StartupObject>TurboWavelets.TurboWaveletsTest</StartupObject>
     <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -17,7 +16,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+    <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
@@ -38,15 +37,24 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TurboWaveletsTest.cs" />
+    <Compile Include="..\TurboWavelets\Biorthogonal53Wavelet1DStatic.cs">
+      <Link>TurboWavelets\Biorthogonal53Wavelet1DStatic.cs</Link>
+    </Compile>
+    <Compile Include="..\TurboWavelets\Biorthogonal53Wavelet2D.cs">
+      <Link>TurboWavelets\Biorthogonal53Wavelet2D.cs</Link>
+    </Compile>
+    <Compile Include="..\TurboWavelets\OrderWavelet2D.cs">
+      <Link>TurboWavelets\OrderWavelet2D.cs</Link>
+    </Compile>
+    <Compile Include="..\TurboWavelets\Wavelet2D.cs">
+      <Link>TurboWavelets\Wavelet2D.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\TurboWavelets\TurboWavelets.csproj">
-      <Project>{1E7A9FFF-4D2D-4608-98CF-051E3F883266}</Project>
-      <Name>TurboWavelets</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Folder Include="TurboWavelets\" />
   </ItemGroup>
 </Project>
