--- a/TurboWavelets-Test/TurboWavelets-Test.csproj
+++ b/TurboWavelets-Test/TurboWavelets-Test.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{5C7CD59F-8311-41F2-93D4-058913CEEA91}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>TurboWavelets</RootNamespace>
-    <AssemblyName>TurboWavelets</AssemblyName>
+    <AssemblyName>TurboWaveletsTests</AssemblyName>
     <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
