--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 # Environment variables
 env:
   global:
-    - GH_REPO_NAME: <your_repo>
+    - GH_REPO_NAME: TurboWavelets.Net
     - DOXYFILE: $TRAVIS_BUILD_DIR/Doxyfile
     - GH_REPO_REF: https://github.com/codeprof/TurboWavelets.Net.git
 
