--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
 
 # Build your code e.g. by calling make
 script:
-  - make
+  - echo no "build done here..."
 
 # Generate and deploy documentation
 after_success:
