--- a/TurboWavelets-Samples/Wavelet-image-upscaling/Wavelet-image-upscaling/Wavelet-image-upscaling.csproj
+++ b/TurboWavelets-Samples/Wavelet-image-upscaling/Wavelet-image-upscaling/Wavelet-image-upscaling.csproj
@@ -1,53 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{824F0C83-9719-4068-9B64-8CD79C56E28A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Waveletimageupscaling</RootNamespace>
-    <AssemblyName>Wavelet-image-upscaling</AssemblyName>
-    <ReleaseVersion>0.2</ReleaseVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
+    <TargetFramework>net4</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RootNamespace>TurbowaveletsSamples</RootNamespace>
+
+    <Copyright>benutzer</Copyright>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ImageArrayConverter.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\TurboWavelets\TurboWavelets.csproj">
-      <Project>{1E7A9FFF-4D2D-4608-98CF-051E3F883266}</Project>
-      <Name>TurboWavelets</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\..\TurboWavelets\TurboWavelets.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Include="sample.png" />
   </ItemGroup>
+
 </Project>
