--- a/TurboWavelets-Test/TurboWavelets-Test.csproj
+++ b/TurboWavelets-Test/TurboWavelets-Test.csproj
@@ -1,63 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5C7CD59F-8311-41F2-93D4-058913CEEA91}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>TurboWavelets</RootNamespace>
-    <AssemblyName>TurboWaveletsTests</AssemblyName>
-    <ReleaseVersion>0.2</ReleaseVersion>
+    <TargetFramework>net4</TargetFramework>
+    <RootNamespace>TurboWaveletsTests</RootNamespace>
+
+    <Copyright>Stefan Moebius</Copyright>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Externalconsole>true</Externalconsole>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.3.2.0\lib\net40\nunit.framework.dll</HintPath>
-    </Reference>
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TurboWaveletsTest.cs" />
-    <Compile Include="..\TurboWavelets\Biorthogonal53Wavelet1DStatic.cs">
-      <Link>TurboWavelets\Biorthogonal53Wavelet1DStatic.cs</Link>
-    </Compile>
-    <Compile Include="..\TurboWavelets\Biorthogonal53Wavelet2D.cs">
-      <Link>TurboWavelets\Biorthogonal53Wavelet2D.cs</Link>
-    </Compile>
-    <Compile Include="..\TurboWavelets\OrderWavelet2D.cs">
-      <Link>TurboWavelets\OrderWavelet2D.cs</Link>
-    </Compile>
-    <Compile Include="..\TurboWavelets\Wavelet2D.cs">
-      <Link>TurboWavelets\Wavelet2D.cs</Link>
-    </Compile>
-    <Compile Include="..\TurboWavelets\HaarWavelet2D.cs">
-      <Link>TurboWavelets\HaarWavelet2D.cs</Link>
-    </Compile>
+    <ProjectReference Include="..\TurboWavelets\TurboWavelets.csproj" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TurboWavelets\" />
-  </ItemGroup>
+
 </Project>
