--- a/TurboWavelets-Samples/Contrast-based-adaptive-sharpening/Contrast-based-adaptive-sharpening/Contrast-based-adaptive-sharpening.csproj
+++ b/TurboWavelets-Samples/Contrast-based-adaptive-sharpening/Contrast-based-adaptive-sharpening/Contrast-based-adaptive-sharpening.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net4</TargetFramework>
+    <OutputType>Exe</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>TurbowaveletsSamples</RootNamespace>
 
