--- a/TurboWavelets-Samples/Wavelet-image-upscaling/Wavelet-image-upscaling/Wavelet-image-upscaling.csproj
+++ b/TurboWavelets-Samples/Wavelet-image-upscaling/Wavelet-image-upscaling/Wavelet-image-upscaling.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net4</TargetFramework>
+    <OutputType>Exe</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>TurbowaveletsSamples</RootNamespace>
 
